# purplestar

./: .gitignore  LICENSE  README.md  README.zh-Hant.md  pyproject.toml
guidelines/: purplestar_chart_plaintext_format.md  purplestar_chart_schema.md
purplestar/: __init__.py  cli.py
purplestar/core/: chart.py  geo.py  lunar.py  palace.py  solar_time.py  stars.py
purplestar/data/: constants.py  stars_data.py
purplestar/output/: json_schema.py  plaintext.py
tests/: test_charts.py  test_solar_time.py
tests/output/: BJ1_ZW.json  BJ1_ZW.txt  HK1_CTM.json  HK1_CTM.txt  KL1_NA.json  KL1_NA.txt  LD1_EH.json  LD1_EH.txt  NY1_MR.json  NY1_MR.txt  PR1_SD.json  PR1_SD.txt  SF1_DC.json  SF1_DC.txt  SG1_THL.json  SG1_THL.txt  SY1_JOB.json  SY1_JOB.txt  TK1_YT.json  TK1_YT.txt  TP1_LML.json  TP1_LML.txt  VN1_LB.json  VN1_LB.txt
