[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purplestar"
version = "1.0.5"
description = "Purple Star Astrology (紫微斗數 or Zi Wei Dou Shu) natal chart generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jason Chao", email = "chao@jasontc.net" },
]
keywords = ["ziwei", "purple star", "astrology", "zi wei dou shu", "紫微斗數"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sxtwl>=2.0.7",
    "click>=8.0",
    "pytz>=2023.3",
    "geonamescache>=2.0",
]

[project.optional-dependencies]
geo-tz = ["timezonefinder>=6.0"]

[project.scripts]
purplestar = "purplestar.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["purplestar*"]

[project.urls]
"Homepage" = "https://github.com/jason-chao/purplestar"
"Bug Tracker" = "https://github.com/jason-chao/purplestar/issues"